--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <java.version>17</java.version>
     </properties>
 
-    <!-- Add Spring Boot Starter Web dependency -->
+    <dependencies>
+        <!-- Add Spring Boot Starter Web dependency -->
 
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
